--- a/src/SampleApplication/SampleApplication.csproj
+++ b/src/SampleApplication/SampleApplication.csproj
@@ -24,6 +24,8 @@
     <EmbeddedResource Include="Scripts\Script0001 - Create tables.sql" />
     <EmbeddedResource Include="Scripts\Script0002 - Default feed.sql" />
     <EmbeddedResource Include="Scripts\Script0003 - Settings.sql" />
+    <EmbeddedResource Include="Scripts\Script0004 - Redirects.sql" />
+    <EmbeddedResource Include="Scripts\Script0005 - Redirects add time to travel.sql" />
   </ItemGroup>
 
   <ItemGroup>
