Support .NET Standard 1.3

--- a/src/DbUp.Rollback/DbUp.Rollback.csproj
+++ b/src/DbUp.Rollback/DbUp.Rollback.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
+    <Authors>Atanas Simeonov</Authors>
+    <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back.</Description>
+    <Version>1.0.0-prev1</Version>
   </PropertyGroup>
 
   <ItemGroup>
