Update samples. Refactor extensions allowing different journal table providers

--- a/src/DbUp.Downgrade/DbUp.Downgrade.csproj
+++ b/src/DbUp.Downgrade/DbUp.Downgrade.csproj
@@ -7,6 +7,8 @@
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
     <RepositoryType />
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Authors>Atanas Simeonov</Authors>
+    <Company>Atanas Simeonov</Company>
   </PropertyGroup>
 
   <ItemGroup>
