--- a/src/DbUp.Downgrade/DbUp.Downgrade.csproj
+++ b/src/DbUp.Downgrade/DbUp.Downgrade.csproj
@@ -6,13 +6,14 @@
     <PackageProjectUrl>https://github.com/asimeonov/DbUp.Downgrade</PackageProjectUrl>
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
     <RepositoryType />
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Authors>Atanas Simeonov</Authors>
     <Company>Atanas Simeonov</Company>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dbup" Version="4.2.0" />
+    <PackageReference Include="dbup-core" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
