--- a/src/DbUp.Downgrade.SqlServer/DbUp.Downgrade.SqlServer.csproj
+++ b/src/DbUp.Downgrade.SqlServer/DbUp.Downgrade.SqlServer.csproj
@@ -1,13 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.0.0</Version>
     <Authors>Atanas Simeonov</Authors>
     <Company>Atanas Simeonov</Company>
-    <Description>DbUp.Downgrade default SchemaVersion implementation for MS SqlServer.</Description>
+    <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back. SchemaVersion implementation for MS SqlServer.</Description>
     <PackageProjectUrl>https://github.com/asimeonov/DbUp.Downgrade</PackageProjectUrl>
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>DbUp.Downgrade</PackageId>
+    <Product>DbUp.Downgrade</Product>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +18,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DbUp.Downgrade\DbUp.Downgrade.csproj" />
+    <ProjectReference Include="..\DbUp.Downgrade\DbUp.Downgrade.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <_PackageFiles Include="$(OutputPath)\DbUp.Downgrade.dll">
+      <BuildAction>None</BuildAction>
+      <PackagePath>lib\$(TargetFramework)\</PackagePath>
+    </_PackageFiles>
+  </ItemGroup>
 </Project>
