Refactoring of DowngradeEnabledTableJournal way of finding matching downgrade script. Added new functionallity for finding the matching scripts with IDongradeScriptFinder that searches currently execuing script in downgrade scripts. Major version bumbed due to change in the way UpgradeEngineBuilder is working.

--- a/src/DbUp.Downgrade.PostgreSQL/DbUp.Downgrade.PostgreSQL.csproj
+++ b/src/DbUp.Downgrade.PostgreSQL/DbUp.Downgrade.PostgreSQL.csproj
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back. SchemaVersion implementation for PostgreSQL.</Description>
-    <Version>1.1.0</Version>
+    <Version>2.0.0</Version>
     <Authors>Atanas Simeonov</Authors>
     <PackageProjectUrl>https://github.com/asimeonov/DbUp.Downgrade</PackageProjectUrl>
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
