--- a/src/DbUp.Downgrade.SqlServer/DbUp.Downgrade.SqlServer.csproj
+++ b/src/DbUp.Downgrade.SqlServer/DbUp.Downgrade.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.0</Version>
+    <Version>2.0.0</Version>
     <Authors>Atanas Simeonov</Authors>
     <Company>Atanas Simeonov</Company>
     <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back. SchemaVersion implementation for MS SqlServer.</Description>
@@ -11,6 +11,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>DbUp.Downgrade</PackageId>
     <Product>DbUp.Downgrade</Product>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
