--- a/src/DbUp.Downgrade/DbUp.Downgrade.csproj
+++ b/src/DbUp.Downgrade/DbUp.Downgrade.csproj
@@ -10,6 +10,9 @@
     <Authors>Atanas Simeonov</Authors>
     <Company>Atanas Simeonov</Company>
     <Version>2.0.0</Version>
+    <PackageId>DbUp.Downgrade.Core</PackageId>
+    <Product>DbUp.Downgrade.Core</Product>
+    
   </PropertyGroup>
 
   <ItemGroup>
