--- a/src/DbUp.Downgrade/DbUp.Downgrade.csproj
+++ b/src/DbUp.Downgrade/DbUp.Downgrade.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -12,7 +12,6 @@
     <Version>2.0.0</Version>
     <PackageId>DbUp.Downgrade.Core</PackageId>
     <Product>DbUp.Downgrade.Core</Product>
-    
   </PropertyGroup>
 
   <ItemGroup>
