--- a/src/DbUp.Downgrade.PostgreSQL/DbUp.Downgrade.PostgreSQL.csproj
+++ b/src/DbUp.Downgrade.PostgreSQL/DbUp.Downgrade.PostgreSQL.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back. SchemaVersion implementation for PostgreSQL.</Description>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Authors>Atanas Simeonov</Authors>
     <PackageProjectUrl>https://github.com/asimeonov/DbUp.Downgrade</PackageProjectUrl>
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,5 +26,11 @@
       <BuildAction>None</BuildAction>
       <PackagePath>lib\$(TargetFramework)\</PackagePath>
     </_PackageFiles>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
