--- a/src/DbUp.Downgrade.SqlServer/DbUp.Downgrade.SqlServer.csproj
+++ b/src/DbUp.Downgrade.SqlServer/DbUp.Downgrade.SqlServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Authors>Atanas Simeonov</Authors>
     <Company>Atanas Simeonov</Company>
     <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back. SchemaVersion implementation for MS SqlServer.</Description>
@@ -11,7 +11,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>DbUp.Downgrade</PackageId>
     <Product>DbUp.Downgrade</Product>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,5 +30,12 @@
       <BuildAction>None</BuildAction>
       <PackagePath>lib\$(TargetFramework)\</PackagePath>
     </_PackageFiles>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
