--- a/src/DbUp.Downgrade/DbUp.Downgrade.csproj
+++ b/src/DbUp.Downgrade/DbUp.Downgrade.csproj
@@ -6,16 +6,17 @@
     <PackageProjectUrl>https://github.com/asimeonov/DbUp.Downgrade</PackageProjectUrl>
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
     <RepositoryType />
-    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
     <Authors>Atanas Simeonov</Authors>
     <Company>Atanas Simeonov</Company>
-    <Version>2.0.1</Version>
+    <Version>2.1.0</Version>
     <PackageId>DbUp.Downgrade.Core</PackageId>
     <Product>DbUp.Downgrade.Core</Product>
+    <FileVersion>2.1.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dbup-core" Version="4.2.0" />
+    <PackageReference Include="dbup-core" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
