--- a/src/DbUp.Downgrade.SqlServer.Tests/DbUp.Downgrade.SqlServer.Tests.csproj
+++ b/src/DbUp.Downgrade.SqlServer.Tests/DbUp.Downgrade.SqlServer.Tests.csproj
@@ -68,7 +68,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="dbup-sqlserver" Version="5.0.8" />
+    <PackageReference Include="dbup-sqlserver" Version="5.0.37" />
+    <!--<PackageReference Include="DbUp.Downgrade" Version="2.4.0" />-->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
