--- a/src/DbUp.Downgrade.PostgreSQL.Tests/DbUp.Downgrade.PostgreSQL.Tests.csproj
+++ b/src/DbUp.Downgrade.PostgreSQL.Tests/DbUp.Downgrade.PostgreSQL.Tests.csproj
@@ -10,13 +10,44 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="FileSystemScripts\Down\001\Script0004 - Redirects.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FileSystemScripts\Up\001\Script0001 - Create tables.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FileSystemScripts\Up\001\Script0002 - Default feed.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FileSystemScripts\Up\001\Script0003 - Settings.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FileSystemScripts\Up\001\Script0004 - Redirects.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="FolderUpAndDownScrips\Scripts\Script0001 - Create tables.sql" />
+    <EmbeddedResource Include="FolderUpAndDownScrips\Scripts\Script0002 - Default feed.sql" />
+    <EmbeddedResource Include="FolderUpAndDownScrips\Scripts\Script0003 - Settings.sql" />
+    <EmbeddedResource Include="FolderUpAndDownScrips\Scripts\Script0004 - Redirects.sql" />
+    <EmbeddedResource Include="FolderUpAndDownScrips\DowngradeScripts\Script0004 - Redirects.sql" />
+    <EmbeddedResource Include="SuffixUpAndDownScripts\Script0001 - Create tables.sql" />
+    <EmbeddedResource Include="SuffixUpAndDownScripts\Script0002 - Default feed.sql" />
+    <EmbeddedResource Include="SuffixUpAndDownScripts\Script0003 - Settings.sql" />
+    <EmbeddedResource Include="SuffixUpAndDownScripts\Script0004 - Redirects.sql" />
+    <EmbeddedResource Include="SuffixUpAndDownScripts\Script0004 - Redirects_downgrade.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="Npgsql" Version="9.0.2" />
+    <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="4.7.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4">
@@ -27,6 +58,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DbUp.Downgrade.PostgreSQL\DbUp.Downgrade.PostgreSQL.csproj" />
+    <ProjectReference Include="..\DbUp.Downgrade.Shared.Tests\DbUp.Downgrade.Shared.Tests.csproj" />
     <ProjectReference Include="..\DbUp.Downgrade\DbUp.Downgrade.csproj" />
   </ItemGroup>
 
