Update sln lication

--- a/src/SampleApplication/SampleApplication.csproj
+++ b/src/SampleApplication/SampleApplication.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)Samples\FromFolder\v4\SampleScripts.csproj&quot;&#xD;&#xA;&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)Samples\FromFolder\v5\SampleScripts.csproj&quot;&#xD;&#xA;&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)Samples\FromSuffix\v4\SampleScripts.csproj&quot;&#xD;&#xA;&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)Samples\FromSuffix\v5\SampleScripts.csproj&quot;" />
+    <Exec Command="&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)src\Samples\FromFolder\v4\SampleScripts.csproj&quot;&#xD;&#xA;&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)src\Samples\FromFolder\v5\SampleScripts.csproj&quot;&#xD;&#xA;&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)src\Samples\FromSuffix\v4\SampleScripts.csproj&quot;&#xD;&#xA;&quot;$(DevEnvDir)devenv&quot; &quot;$(SolutionDir)DbUp.Rollback.sln&quot; /Build $(configuration) /project &quot;$(SolutionDir)src\Samples\FromSuffix\v5\SampleScripts.csproj&quot;" />
   </Target>
 
 </Project>
