--- a/src/DbUp.Downgrade.PostgreSQL/DbUp.Downgrade.PostgreSQL.csproj
+++ b/src/DbUp.Downgrade.PostgreSQL/DbUp.Downgrade.PostgreSQL.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Description>Extends DbUp pipeline adding capability to store revert scripts in Schema Version table. In case that older version is found newer versions are rolled back. SchemaVersion implementation for PostgreSQL.</Description>
-    <Version>2.4.0</Version>
+    <Version>2.5.0</Version>
     <Authors>Atanas Simeonov</Authors>
     <PackageProjectUrl>https://github.com/asimeonov/DbUp.Downgrade</PackageProjectUrl>
     <RepositoryUrl>https://github.com/asimeonov/DbUp.Downgrade</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>2.4.0.0</AssemblyVersion>
+    <AssemblyVersion>2.5.0.0</AssemblyVersion>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dbup-postgresql" Version="5.0.37" />
+    <PackageReference Include="dbup-postgresql" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
